# vps-scraper

./: .env.example  .esaignore  .gitignore  LICENSE  README.md  aliyun-esa.json  esa.jsonc  index.html  main.py  package.json  pipeline.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: pipeline.yml  test.yml
config/: __init__.py  settings.py
css/: style.css
data/html/: 8748.html  8750.html  8752.html  8754.html  8756.html  8758.html  8760.html  8765.html  8767.html  8770.html  8772.html  8774.html  8777.html  8781.html  8785.html
data/raw/: 8748.json  8750.json  8752.json  8754.json  8756.json  8758.json  8760.json  8765.json  8767.json  8770.json  8772.json  8774.json  8777.json  8781.json  8785.json  8789.json  8793.json  8795.json  8799.json  8805.json  8807.json  8810.json  8812.json  8815.json  8817.json  8819.json  8825.json  8828.json
docs/: page_extraction_guide.md
js/: app.js  config.js  data.js  i18n.js  ui.js
src/: __init__.py
src/ai_clients/: __init__.py  nvidia_client.py  zhipu_client.py
src/scrapers/: __init__.py  base.py  gwvps_scraper.py  page_extract.py
src/utils/: __init__.py  file_utils.py
tests/: README.md  test_scraper.py
